// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginListItem should render 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
        data-testid="TableRow"
      >
        <td
          class="w-20"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 gMOims"
          >
            <div
              class="flex justify-center items-center"
            >
              <svg
                class="w-14 h-14"
              >
                plugin-logo-placeholder.svg
              </svg>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm space-x-2"
          >
            <a
              class="font-semibold link"
              href="/"
            >
              ARK Explorer
            </a>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm pr-16"
          >
            <span>
              ARK.io
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm"
          >
            <span>
              Utility
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm"
          >
            <span>
              v1.3.8
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm"
          >
            <span>
              4.2 MB
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm"
          >
            <div
              class="flex justify-center items-center mx-auto w-6 h-6 text-theme-secondary-500"
              data-testid="PluginListItem__not-installed"
            >
              <div
                class="sc-gsTCUz cXMmJt"
                height="1em"
                width="1em"
              >
                <svg>
                  dash.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="w-16"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 cnmhFM justify-end"
          >
            <button
              class="Button__StyledButton-mdtvtf-0 lmPdYN"
              data-testid="PluginListItem__install"
              type="button"
            >
              Install
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`PluginListItem should render grant icon 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
        data-testid="TableRow"
      >
        <td
          class="w-20"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 gMOims"
          >
            <div
              class="flex justify-center items-center"
            >
              <svg
                class="w-14 h-14"
              >
                plugin-logo-placeholder.svg
              </svg>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm space-x-2"
          >
            <a
              class="font-semibold link"
              href="/"
            >
              ARK Explorer
            </a>
            <div
              class="sc-gsTCUz bVDqPu"
              height="20"
              width="14"
            >
              <svg>
                grant.svg
              </svg>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm pr-16"
          >
            <span>
              ARK.io
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm"
          >
            <span>
              Utility
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm"
          >
            <span>
              v1.3.8
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm"
          >
            <span>
              4.2 MB
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm"
          >
            <div
              class="flex justify-center items-center mx-auto w-6 h-6 text-theme-secondary-500"
              data-testid="PluginListItem__not-installed"
            >
              <div
                class="sc-gsTCUz cXMmJt"
                height="1em"
                width="1em"
              >
                <svg>
                  dash.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="w-16"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 cnmhFM justify-end"
          >
            <button
              class="Button__StyledButton-mdtvtf-0 lmPdYN"
              data-testid="PluginListItem__install"
              type="button"
            >
              Install
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`PluginListItem should render official icon 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
        data-testid="TableRow"
      >
        <td
          class="w-20"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 gMOims"
          >
            <div
              class="flex justify-center items-center"
            >
              <svg
                class="w-14 h-14"
              >
                plugin-logo-placeholder.svg
              </svg>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm space-x-2"
          >
            <a
              class="font-semibold link"
              href="/"
            >
              ARK Explorer
            </a>
            <div
              class="sc-gsTCUz byDVwN"
              height="18"
              width="18"
            >
              <svg>
                official-ark-plugin.svg
              </svg>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm pr-16"
          >
            <span>
              ARK.io
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm"
          >
            <span>
              Utility
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm"
          >
            <span>
              v1.3.8
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm"
          >
            <span>
              4.2 MB
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm"
          >
            <div
              class="flex justify-center items-center mx-auto w-6 h-6 text-theme-secondary-500"
              data-testid="PluginListItem__not-installed"
            >
              <div
                class="sc-gsTCUz cXMmJt"
                height="1em"
                width="1em"
              >
                <svg>
                  dash.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="w-16"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 cnmhFM justify-end"
          >
            <button
              class="Button__StyledButton-mdtvtf-0 lmPdYN"
              data-testid="PluginListItem__install"
              type="button"
            >
              Install
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`PluginListItem should trigger install 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
        data-testid="TableRow"
      >
        <td
          class="w-20"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 gMOims"
          >
            <div
              class="flex justify-center items-center"
            >
              <svg
                class="w-14 h-14"
              >
                plugin-logo-placeholder.svg
              </svg>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm space-x-2"
          >
            <a
              class="font-semibold link"
              href="/"
            >
              ARK Explorer
            </a>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm pr-16"
          >
            <span>
              ARK.io
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm"
          >
            <span>
              Utility
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm"
          >
            <span>
              v1.3.8
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm"
          >
            <span>
              4.2 MB
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm"
          >
            <div
              class="flex justify-center items-center mx-auto w-6 h-6 text-theme-secondary-500"
              data-testid="PluginListItem__not-installed"
            >
              <div
                class="sc-gsTCUz cXMmJt"
                height="1em"
                width="1em"
              >
                <svg>
                  dash.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="w-16"
        >
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 cnmhFM justify-end"
          >
            <button
              class="Button__StyledButton-mdtvtf-0 lmPdYN"
              data-testid="PluginListItem__install"
              type="button"
            >
              Install
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
